Fix title overflow

--- a/style.css
+++ b/style.css
@@ -144,6 +144,8 @@ p{
 
 .book > p{
     text-align: center;
+    text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .book > div > div > p{
@@ -265,8 +267,30 @@ p{
     100%{
         transform:scale(1.4);
         filter:blur(12px);opacity:0}
-    }
+    
+}
 
+/* ----------------------------------------------
+  Generated by AnimatiSS
+  Licensed under FreeBSD License
+  URL: https://xsgames.co/animatiss
+  Twitter: @xsgames_
+---------------------------------------------- */
+
+.blur-in{
+    animation:blur-in 0.4s linear both
+} 
+
+@keyframes blur-in{
+    0%{
+        filter:blur(12px);
+        opacity:0
+    }
+    100%{
+            filter:blur(0);
+            opacity:1
+    }
+}
 /* --------------------------------------------------------------- */
 
 .popUpCreateBook{
